# vaper

./: .gitignore  README.md  meson.build
data/: .desktop  appdata.xml  assets.gresource.xml  com.github.dhhdev.vaper.appdata.xml.in  gschema.xml  stylesheet.css
po/: POTFILES  com.github.dhhdev.vaper.pot  da.po
scripts/: compile-schemas.sh
src/: Application.vala  HeaderBar.vala  meson.build
src/Layouts/: Main.vala  Paned.vala
src/Partials/: Helpers.vala
src/Services/: Settings.vala
src/Views/: About.vala  Recipi.vala  Welcome.vala
src/Widgets/: Window.vala
