executable(
    meson.project_name(),
    'Application.vala',
    'HeaderBar.vala',

    'Layouts/Main.vala',
    'Layouts/Paned.vala',

    'Partials/Helpers.vala',

    'Services/Settings.vala',

    'Views/About.vala',
    'Views/Welcome.vala',
    'Views/Recipi.vala',
    asresources,
    dependencies: [
        dependency('gtk+-3.0'),
        dependency('granite')
    ],
    install: true
)